<resources>
    <string name="app_name">Dice Roller</string>
    <string name="dice_roll_no">1</string>
    <string name="dice_button_text">Roll it</string>
    <string name="lets_roll">Lets Roll</string>
    <string name="nick_name_text_des">displays the nickname of user</string>
    <string name="nickname_edit_text_hint">Enter the Nick name</string>
    <string name="content_desc_img">the image of User</string>
    <string name="done_button">Done</string>
    <string name="save_btn">Profile</string>
    <string name="dice_entry">Save your Dice entry</string>
    <string name="bio" translatable="false">Hi, my name is Aleks.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\nI\'ll be happy to teach you how to make your own aquarium.
\nYou should ask someone else about fishing, though.\n\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
