<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nick_name"
            android:layout_width="332dp"
            android:layout_height="74dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="525dp"
            android:fontFamily="@font/cairo"
            android:hint="@string/nick_name_text_des"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dice_roll"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginBottom="75dp"
            android:hint="@string/dice_roll_no"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nick_name" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="305dp"
            android:layout_height="78dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="43dp"
            android:hint="@string/content_desc_img"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nick_name" />

        <fragment
            android:id="@+id/fragment"
            android:name="io.chillout.diceroller.BlankFragment"
            android:layout_width="346dp"
            android:layout_height="44dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout="@layout/fragment_blank" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>